--- a/APPLIKASI-V2.html
+++ b/APPLIKASI-V2.html
@@ -1629,69 +1629,73 @@
                             </div>
 
                             {/* Social Login & Form Fields Group */}
-                            {(authMode === 'login' || authMode === 'register') && (
+                            {(authMode === 'login' || authMode === 'register' || authMode === 'forgot_password') && (
                                 <>
-                                    {/* Social Login */}
-                                    <div style={{ display: 'flex', gap: 10, marginBottom: 20 }}>
-                                        <button
-                                            onClick={() => setSocialType('google')}
-                                            style={{
-                                                flex: 1,
-                                                padding: '12px',
-                                                background: '#dc2626',
-                                                border: 'none',
-                                                borderRadius: 12,
-                                                color: 'white',
-                                                cursor: 'pointer',
-                                                display: 'flex',
-                                                alignItems: 'center',
-                                                justifyContent: 'center',
-                                                gap: 8,
-                                                fontSize: 13,
-                                                fontWeight: 500,
-                                                fontFamily: 'inherit',
-                                                transition: 'all 0.2s'
-                                            }}>
-                                            <svg width="14" height="14" viewBox="0 0 24 24" fill="white">
-                                                <path d="M12.48 10.92v3.28h7.84c-.24 1.84-.92 3.2-1.84 4.32-1.04 1.28-2.6 2.4-5.44 2.4-4.8 0-8.68-3.88-8.68-8.68s3.88-8.68 8.68-8.68c2.6 0 4.56.92 6 2.32l2.32-2.32C21.04 1.28 17.6 0 12.4 0 5.6 0 0 5.48 0 12.4s5.6 12.4 12.4 12.4c3.6 0 6.36-1.2 8.52-3.44 2.24-2.24 2.8-5.36 2.8-7.88 0-.52-.04-1.04-.12-1.56H12.48z" />
-                                            </svg>
-                                            <span>Google</span>
-                                        </button>
-                                        <button
-                                            onClick={() => setSocialType('microsoft')}
-                                            style={{
-                                                flex: 1,
-                                                padding: '12px',
-                                                background: '#2563eb',
-                                                border: 'none',
-                                                borderRadius: 12,
-                                                color: 'white',
-                                                cursor: 'pointer',
-                                                display: 'flex',
-                                                alignItems: 'center',
-                                                justifyContent: 'center',
-                                                gap: 8,
-                                                fontSize: 13,
-                                                fontWeight: 500,
-                                                fontFamily: 'inherit',
-                                                transition: 'all 0.2s'
-                                            }}>
-                                            <svg width="14" height="14" viewBox="0 0 21 21" fill="white">
-                                                <rect x="1" y="1" width="9" height="9" fill="white" />
-                                                <rect x="11" y="1" width="9" height="9" fill="white" />
-                                                <rect x="1" y="11" width="9" height="9" fill="white" />
-                                                <rect x="11" y="11" width="9" height="9" fill="white" />
-                                            </svg>
-                                            <span>Microsoft</span>
-                                        </button>
-                                    </div>
+                                    {/* Social Login (Hide on Forgot Password) */}
+                                    {authMode !== 'forgot_password' && (
+                                        <>
+                                            <div style={{ display: 'flex', gap: 10, marginBottom: 20 }}>
+                                                <button
+                                                    onClick={() => setSocialType('google')}
+                                                    style={{
+                                                        flex: 1,
+                                                        padding: '12px',
+                                                        background: '#dc2626',
+                                                        border: 'none',
+                                                        borderRadius: 12,
+                                                        color: 'white',
+                                                        cursor: 'pointer',
+                                                        display: 'flex',
+                                                        alignItems: 'center',
+                                                        justifyContent: 'center',
+                                                        gap: 8,
+                                                        fontSize: 13,
+                                                        fontWeight: 500,
+                                                        fontFamily: 'inherit',
+                                                        transition: 'all 0.2s'
+                                                    }}>
+                                                    <svg width="14" height="14" viewBox="0 0 24 24" fill="white">
+                                                        <path d="M12.48 10.92v3.28h7.84c-.24 1.84-.92 3.2-1.84 4.32-1.04 1.28-2.6 2.4-5.44 2.4-4.8 0-8.68-3.88-8.68-8.68s3.88-8.68 8.68-8.68c2.6 0 4.56.92 6 2.32l2.32-2.32C21.04 1.28 17.6 0 12.4 0 5.6 0 0 5.48 0 12.4s5.6 12.4 12.4 12.4c3.6 0 6.36-1.2 8.52-3.44 2.24-2.24 2.8-5.36 2.8-7.88 0-.52-.04-1.04-.12-1.56H12.48z" />
+                                                    </svg>
+                                                    <span>Google</span>
+                                                </button>
+                                                <button
+                                                    onClick={() => setSocialType('microsoft')}
+                                                    style={{
+                                                        flex: 1,
+                                                        padding: '12px',
+                                                        background: '#2563eb',
+                                                        border: 'none',
+                                                        borderRadius: 12,
+                                                        color: 'white',
+                                                        cursor: 'pointer',
+                                                        display: 'flex',
+                                                        alignItems: 'center',
+                                                        justifyContent: 'center',
+                                                        gap: 8,
+                                                        fontSize: 13,
+                                                        fontWeight: 500,
+                                                        fontFamily: 'inherit',
+                                                        transition: 'all 0.2s'
+                                                    }}>
+                                                    <svg width="14" height="14" viewBox="0 0 21 21" fill="white">
+                                                        <rect x="1" y="1" width="9" height="9" fill="white" />
+                                                        <rect x="11" y="1" width="9" height="9" fill="white" />
+                                                        <rect x="1" y="11" width="9" height="9" fill="white" />
+                                                        <rect x="11" y="11" width="9" height="9" fill="white" />
+                                                    </svg>
+                                                    <span>Microsoft</span>
+                                                </button>
+                                            </div>
 
-                                    {/* Divider */}
-                                    <div style={{ display: 'flex', alignItems: 'center', gap: 12, margin: '20px 0' }}>
-                                        <div style={{ flex: 1, height: 1, background: 'rgba(255,255,255,0.1)' }}></div>
-                                        <span style={{ color: 'rgba(255,255,255,0.4)', fontSize: 11, textTransform: 'uppercase', letterSpacing: 1 }}>atau</span>
-                                        <div style={{ flex: 1, height: 1, background: 'rgba(255,255,255,0.1)' }}></div>
-                                    </div>
+                                            {/* Divider */}
+                                            <div style={{ display: 'flex', alignItems: 'center', gap: 12, margin: '20px 0' }}>
+                                                <div style={{ flex: 1, height: 1, background: 'rgba(255,255,255,0.1)' }}></div>
+                                                <span style={{ color: 'rgba(255,255,255,0.4)', fontSize: 11, textTransform: 'uppercase', letterSpacing: 1 }}>atau</span>
+                                                <div style={{ flex: 1, height: 1, background: 'rgba(255,255,255,0.1)' }}></div>
+                                            </div>
+                                        </>
+                                    )}
 
                                     {/* Form Fields */}
                                     {authMode === 'register' && (
@@ -1799,7 +1803,7 @@
                                         style={{
                                             width: '100%',
                                             padding: '16px',
-                                            background: 'linear-gradient(135deg, #6366f1, #8b5cf6)',
+                                            background: authMode === 'forgot_password' ? '#6366f1' : 'linear-gradient(135deg, #6366f1, #8b5cf6)',
                                             border: 'none',
                                             borderRadius: 14,
                                             color: 'white',
@@ -1814,17 +1818,21 @@
                                             gap: 8
                                         }}
                                     >
-                                        {authMode === 'login' ? 'Masuk' : (authMode === 'forgot_password' ? 'Kirim Link Reset' : 'Daftar Sekarang')} <Icon name="arrow-right" size={18} />
+                                        {authMode === 'login' ? 'Masuk' : (authMode === 'forgot_password' ? 'Kirim Kode OTP' : 'Daftar Sekarang')} {authMode !== 'forgot_password' && <Icon name="arrow-right" size={18} />}
                                     </button>
 
-                                    <p style={{ textAlign: 'center', marginTop: 20, fontSize: 13, color: 'rgba(255,255,255,0.5)' }}>
-                                        {authMode === 'login' ? 'Belum punya akun? ' : (authMode === 'register' ? 'Sudah punya akun? ' : 'Sudah ingat password? ')}
-                                        <span onClick={() => setAuthMode('login')} style={{ color: '#6366f1', cursor: 'pointer', fontWeight: 600 }}>
-                                            {authMode === 'login' ? (
-                                                <span onClick={(e) => { e.stopPropagation(); setAuthMode('register'); }}>Daftar</span>
-                                            ) : 'Login'}
-                                        </span>
-                                    </p>
+                                    {authMode === 'forgot_password' ? (
+                                        <div style={{ textAlign: 'center', marginTop: 20 }}>
+                                            <span onClick={() => setAuthMode('login')} style={{ color: 'rgba(255,255,255,0.7)', fontSize: 13, cursor: 'pointer', fontWeight: 600 }}>Kembali</span>
+                                        </div>
+                                    ) : (
+                                        <p style={{ textAlign: 'center', marginTop: 20, fontSize: 13, color: 'rgba(255,255,255,0.5)' }}>
+                                            {authMode === 'login' ? 'Belum punya akun? ' : 'Sudah punya akun? '}
+                                            <span onClick={() => setAuthMode(authMode === 'login' ? 'register' : 'login')} style={{ color: '#6366f1', cursor: 'pointer', fontWeight: 600 }}>
+                                                {authMode === 'login' ? 'Daftar' : 'Masuk'}
+                                            </span>
+                                        </p>
+                                    )}
                                 </>
                             )}
 
