UI Polish: exact text match for Forgot Password screen

--- a/APPLIKASI-V2.html
+++ b/APPLIKASI-V2.html
@@ -1620,11 +1620,11 @@
                                     textTransform: 'uppercase'
                                 }}>
                                     {authMode === 'login' ? 'Selamat Datang!' :
-                                        authMode === 'register' ? 'Buat Akun Baru' : 'Reset Password'}
+                                        authMode === 'register' ? 'Buat Akun Baru' : 'LUPA KATA SANDI'}
                                 </h1>
                                 <p style={{ color: 'rgba(255,255,255,0.5)', fontSize: 13 }}>
                                     {authMode === 'login' ? 'Masuk ke akun Anda' :
-                                        authMode === 'register' ? 'Buat akun gratis sekarang' : 'Masukkan email u/ reset password'}
+                                        authMode === 'register' ? 'Buat akun gratis sekarang' : 'Masukkan email untuk menerima kode OTP'}
                                 </p>
                             </div>
 
