--- a/index.html
+++ b/index.html
@@ -977,7 +977,8 @@
     </div>
     <div id="root">
         <div style="color: #666; font-family: sans-serif; text-align: center; padding-top: 50px;">
-            <h2>Memuat Aplikasi...</h2>
+            <h2>Memuat Aplikasi v2.5 (Live Update)...</h2>
+            <p>Mohon tunggu sebentar, sedang sinkronisasi data...</p>
             <p>Jika halaman ini tidak berubah dalam 10 detik, cek koneksi internet Anda.</p>
         </div>
     </div>
