Hotfix: Define REGISTERED_MEMBERS constant

--- a/APPLIKASI-V2.html
+++ b/APPLIKASI-V2.html
@@ -5100,6 +5100,7 @@
         };
 
         // Global Categories Data (Shared)
+        const REGISTERED_MEMBERS = []; // Fallback for legacy references
         const CATEGORIES_DATA = [
             { name: 'Hardware', icon: <img src="ICON HDW.png" alt="Hardware" style={{ width: '100%', height: '100%', objectFit: 'contain', filter: 'drop-shadow(0 4px 6px rgba(0,0,0,0.2))' }} />, color: '#3B82F6' },
             { name: 'Software', icon: '💿', color: '#8B5CF6' },
