--- a/APPLIKASI-V2.html
+++ b/APPLIKASI-V2.html
@@ -1121,9 +1121,14 @@
                             <Icon name="user-plus" size={16} />
                             <span style={{ color: participants.some(p => p.name === user) ? 'var(--primary)' : 'inherit' }}>Ikut Serta</span>
                         </div>
-                        <div onClick={(e) => { e.stopPropagation(); globalShare({ title: 'Diskusi IT', text: `Yuk bantu jawab diskusi ini: "${title}"` }); }} style={{ display: 'flex', alignItems: 'center', gap: '6px', color: 'var(--text-gray)', fontSize: '12px', cursor: 'pointer', marginLeft: 'auto' }}>
+                        <div onClick={(e) => { e.stopPropagation(); globalShare({ title: 'Diskusi IT', text: `Yuk bantu jawab diskusi ini: "${title}"` }); }} style={{ display: 'flex', alignItems: 'center', gap: '6px', color: 'var(--text-gray)', fontSize: '12px', cursor: 'pointer' }}>
                             <Icon name="share-2" size={16} />
                         </div>
+                        {onDelete && (
+                            <div onClick={(e) => { e.stopPropagation(); onDelete(); }} style={{ display: 'flex', alignItems: 'center', gap: '6px', color: '#EF4444', fontSize: '12px', cursor: 'pointer', marginLeft: 'auto' }}>
+                                <Icon name="trash-2" size={16} />
+                            </div>
+                        )}
                     </div>
                 </div>
             );
@@ -2076,9 +2081,15 @@
                                 <h1>Riwayat Diskusi</h1>
                             </header>
 
-                            <div className="search-bar" style={{ background: 'rgba(255,255,255,0.05)', border: '1px solid var(--border)', marginBottom: 24 }}>
+                            <div className="search-bar" style={{ background: 'rgba(255,255,255,0.05)', border: '1px solid var(--border)', marginBottom: 16 }}>
                                 <Icon name="search" color="var(--text-gray)" />
                                 <input type="text" placeholder="Cari pesan atau teman..." style={{ color: 'white' }} />
+                            </div>
+
+                            <div style={{ display: 'flex', justifyContent: 'flex-end', marginBottom: 12 }}>
+                                <button onClick={() => { if (confirm('Hapus semua pesan?')) setChats([]); }} style={{ background: 'transparent', border: 'none', color: '#EF4444', fontSize: 11, cursor: 'pointer', display: 'flex', alignItems: 'center', gap: 4, fontWeight: 600 }}>
+                                    <Icon name="trash-2" size={14} /> Bersihkan Semua
+                                </button>
                             </div>
 
                             {filter === 'inbox' && (
@@ -2127,8 +2138,20 @@
             );
         };
 
-        const Notifikasi = ({ onNavigate, notifications = [], onNotificationClick }) => {
+        const Notifikasi = ({ onNavigate, notifications = [], onNotificationClick, setNotifications }) => {
             const [filter, setFilter] = useState('all');
+
+            const handleDelete = (id) => {
+                if (confirm('Hapus notifikasi ini?')) {
+                    setNotifications(notifications.filter(n => n.id !== id));
+                }
+            };
+
+            const clearAll = () => {
+                if (confirm('Hapus semua notifikasi?')) {
+                    setNotifications([]);
+                }
+            };
 
             // Filter logic
             const filtered = filter === 'all' ? notifications : notifications.filter(n => n.type === filter);
@@ -2148,11 +2171,16 @@
                             </div>
                         </div>
                         <div className="app-content">
-                            <header className="mobile-header" style={{ display: 'flex', alignItems: 'center', gap: 12 }}>
-                                <div onClick={() => onNavigate && onNavigate('home')} style={{ cursor: 'pointer', padding: 8, background: 'rgba(99, 102, 241, 0.15)', borderRadius: 10, display: 'flex', alignItems: 'center', justifyContent: 'center' }}>
-                                    <Icon name="chevron-left" size={20} color="var(--primary)" />
+                            <header className="mobile-header" style={{ display: 'flex', alignItems: 'center', gap: 12, justifyContent: 'space-between' }}>
+                                <div style={{ display: 'flex', alignItems: 'center', gap: 12 }}>
+                                    <div onClick={() => onNavigate && onNavigate('home')} style={{ cursor: 'pointer', padding: 8, background: 'rgba(99, 102, 241, 0.15)', borderRadius: 10, display: 'flex', alignItems: 'center', justifyContent: 'center' }}>
+                                        <Icon name="chevron-left" size={20} color="var(--primary)" />
+                                    </div>
+                                    <h1>Notifikasi</h1>
                                 </div>
-                                <h1>Notifikasi</h1>
+                                <div onClick={clearAll} style={{ cursor: 'pointer', color: '#EF4444', padding: 8 }} title="Hapus Semua">
+                                    <Icon name="trash-2" size={20} />
+                                </div>
                             </header>
                             <div style={{ display: 'flex', flexDirection: 'column', gap: 12 }}>
                                 {filtered.length === 0 && <div style={{ color: 'var(--text-gray)', textAlign: 'center', marginTop: 40 }}>Tidak ada notifikasi di kategori ini.</div>}
@@ -2167,6 +2195,14 @@
                                             <div style={{ fontWeight: 700, fontSize: 14 }}>{n.title}</div>
                                             <div style={{ fontSize: 12, color: 'var(--text-gray)', marginTop: 2 }}>{n.desc}</div>
                                             <div style={{ fontSize: 10, color: 'rgba(255,255,255,0.2)', marginTop: 4 }}>{n.time}</div>
+                                        </div>
+                                        <div
+                                            onClick={(e) => { e.stopPropagation(); handleDelete(n.id); }}
+                                            style={{ padding: 8, color: '#EF4444', opacity: 0.5, cursor: 'pointer' }}
+                                            onMouseOver={e => e.currentTarget.style.opacity = 1}
+                                            onMouseOut={e => e.currentTarget.style.opacity = 0.5}
+                                        >
+                                            <Icon name="trash-2" size={16} />
                                         </div>
                                     </div>
                                 ))}
@@ -3080,6 +3116,12 @@
                                                     key={i} user={d.user} title={d.title} tags={d.tags} comments={d.comments} participants={d.participants}
                                                     onReply={() => handleReplyTo(d.user)}
                                                     onAddColleague={() => { setSelectedDiscussionIdx(i); setShowMemberSelector(true); }}
+                                                    onDelete={() => {
+                                                        if (confirm('Hapus diskusi ini?')) {
+                                                            const updated = discussions.filter((_, idx) => idx !== i);
+                                                            onUpdateCategoryData(bidang.name, { ...categoryData, discussions: updated });
+                                                        }
+                                                    }}
                                                 />
                                             ))}
                                         </div>
@@ -5637,6 +5679,7 @@
                                 onNavigate={(target) => setTab(target)}
                                 notifications={notifications}
                                 onNotificationClick={handleNotificationClick}
+                                setNotifications={setNotifications}
                             />
                         </div>
                         <div style={{ display: tab === 'profil' ? 'block' : 'none' }}>
