Fix Deep-AI modal scrolling issue

--- a/APPLIKASI-V2.html
+++ b/APPLIKASI-V2.html
@@ -2348,7 +2348,7 @@
                                 borderRadius: 32, border: '1px solid var(--primary)',
                                 maxHeight: '90vh', overflowY: 'auto', padding: 0,
                                 position: 'relative', boxShadow: '0 0 80px rgba(99, 102, 241, 0.4)',
-                                overflow: 'hidden'
+                                overflowX: 'hidden'
                             }} onClick={e => e.stopPropagation()}>
                                 {isAnalyzingLocal && (
                                     <div style={{
@@ -3741,7 +3741,7 @@
                                         borderRadius: 32, border: '1px solid var(--primary)',
                                         maxHeight: '90vh', overflowY: 'auto', padding: 0,
                                         position: 'relative', boxShadow: '0 0 80px rgba(99, 102, 241, 0.4)',
-                                        overflow: 'hidden'
+                                        overflowX: 'hidden'
                                     }} onClick={e => e.stopPropagation()}>
                                         {isAnalyzing && (
                                             <div style={{
