UI: Enable vertical scrolling for 3D page container on mobile

--- a/index.html
+++ b/index.html
@@ -999,6 +999,13 @@
         }
 
         @media (max-width: 768px) {
+            .page-container-3d {
+                overflow-y: auto !important;
+                height: 100vh;
+                padding-bottom: 120px;
+                -webkit-overflow-scrolling: touch;
+            }
+
             .db-layout {
                 flex-direction: column;
             }
