Fix: Resolved white screen error by correcting nested button tags in Home component

--- a/index.html
+++ b/index.html
@@ -4716,6 +4716,7 @@
                                     onMouseOut={e => e.currentTarget.style.transform = 'translateY(0)'}
                                 >
                                     <Icon name="zap" size={14} /> ChatGPT
+                                </button>
                                 <button
                                     onClick={() => {
                                         setSearchSource('deep-ai');
